# pyLump

./: .gitignore  .readthedocs.yaml  License  Showcase.ipynb  models.py  pyLump.py  pylump.py  pyproject.toml  readme.rst  requirements.txt
.github/workflows/: python-package.yml
docs/: requirements.txt
docs/source/: Showcase.nblink  code_documentation.rst  conf.py  index.rst  tutorial.rst
tests/: test_models.py
