[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylump"
version = "0.1.0"
authors = [{name = "Luka Novak, Domen Gorjup, Janko Slavič", email = "janko.slavic@fs.uni-lj.si"}]
maintainers = [{name = "Luka Novak, Domen Gorjup, Janko Slavič", email = "klemen.zaletelj@fs.uni-lj.si"}]
license = "MIT"
description = "Multi Degree of Freedom (mass-spring-damper) Models."
readme = "readme.rst"
keywords = ["lumped mass", "MDOF", "dynamics"]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.11.0",
    "py",
    "pytest",
    "scipy>=1.2.0",
    "matplotlib",
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "pytest",
    "sphinx-rtd-theme",
    "nbsphinx",
    "nbsphinx_link",
    "nbconvert",
    "jupyter",
    "sphinx-book-theme",
]

[project.urls]
homepage = "https://github.com/ladisk/pylump"
documentation = "https://pylump.readthedocs.io/en/latest/"
source = "https://github.com/ladisk/pylump"